--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Team-Losung Tischtennis v1.1</title>
+    <title>Team-Losung Tischtennis v1.2</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -110,18 +110,70 @@
             }
         }
 
+        function drawTeams() {
+            const teamTable = document.getElementById('teamTable').querySelector('tbody');
+            teamTable.innerHTML = '';
+            teams = [];
+
+            if (players.length < 2) {
+                alert('Es müssen mindestens zwei Spieler hinzugefügt werden!');
+                return;
+            }
+
+            const shuffledPlayers = [...players];
+            shuffle(shuffledPlayers);
+
+            let teamCount = 1;
+            while (shuffledPlayers.length >= 2) {
+                const player1 = shuffledPlayers.pop();
+                const player2 = shuffledPlayers.pop();
+                const teamName = `Team ${teamCount}`;
+                teams.push({ player1, player2, teamName });
+                const row = `<tr>
+                    <td>${teamName}</td>
+                    <td>${player1}</td>
+                    <td>${player2}</td>
+                    <td><input type="text" class="rename-input" value="${teamName}" onchange="updateTeamName(${teamCount - 1}, this.value)"></td>
+                </tr>`;
+                teamTable.innerHTML += row;
+                teamCount++;
+            }
+        }
+
+        function updateTeamName(teamIndex, newName) {
+            teams[teamIndex].teamName = newName;
+        }
+
+        function saveTeamNames() {
+            const teamTable = document.getElementById('teamTable').querySelector('tbody').rows;
+
+            for (let i = 0; i < teamTable.length; i++) {
+                const newName = teamTable[i].querySelector('.rename-input').value.trim();
+                teams[i].teamName = newName;
+            }
+
+            set(ref(db, 'teams'), teams)
+                .then(() => alert('Teamnamen erfolgreich gespeichert.'))
+                .catch(error => console.error('Fehler beim Speichern der Teamnamen:', error));
+        }
+
         function loadDataFromFirebase() {
             const dbRef = ref(db);
-            get(child(dbRef, 'teams')).then((snapshot) => {
+            get(child(dbRef, 'teams')).then(snapshot => {
                 if (snapshot.exists()) {
                     teams = snapshot.val();
                     renderTeams();
-                    alert('Teams erfolgreich aus Firebase geladen.');
                 } else {
-                    alert('Keine Teams in Firebase gefunden.');
+                    alert('Keine Teams in der Datenbank gefunden.');
                 }
-            }).catch((error) => {
-                console.error('Fehler beim Laden der Daten:', error);
+            });
+            get(child(dbRef, 'spielplan')).then(snapshot => {
+                if (snapshot.exists()) {
+                    schedule = snapshot.val();
+                    renderSchedule();
+                } else {
+                    alert('Kein Spielplan in der Datenbank gefunden.');
+                }
             });
         }
 
@@ -130,7 +182,7 @@
             teamTable.innerHTML = '';
             teams.forEach((team, index) => {
                 const row = `<tr>
-                    <td>Team ${index + 1}</td>
+                    <td>${team.teamName}</td>
                     <td>${team.player1}</td>
                     <td>${team.player2}</td>
                     <td><input type="text" class="rename-input" value="${team.teamName}" onchange="updateTeamName(${index}, this.value)"></td>
@@ -139,11 +191,30 @@
             });
         }
 
-        function updateTeamName(teamIndex, newName) {
-            teams[teamIndex].teamName = newName;
+        function renderSchedule() {
+            const scheduleTable = document.getElementById('scheduleTable').querySelector('tbody');
+            scheduleTable.innerHTML = '';
+            schedule.forEach((game, index) => {
+                const row = `<tr>
+                    <td>Spiel ${game.match}</td>
+                    <td>${game.team1}</td>
+                    <td>${game.team2}</td>
+                    <td>${game.result || 'Offen'}</td>
+                </tr>`;
+                scheduleTable.innerHTML += row;
+            });
+        }
+
+        function shuffle(array) {
+            for (let i = array.length - 1; i > 0; i--) {
+                const j = Math.floor(Math.random() * (i + 1));
+                [array[i], array[j]] = [array[j], array[i]];
+            }
         }
 
         window.addPlayer = addPlayer;
+        window.drawTeams = drawTeams;
+        window.saveTeamNames = saveTeamNames;
         window.loadDataFromFirebase = loadDataFromFirebase;
     </script>
 </body>
