--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Team-Losung Tischtennis v1.2</title>
+    <title>Team-Losung Tischtennis v1.1</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -80,7 +80,7 @@
 
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-app.js";
-        import { getDatabase, ref, set, get, child } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-database.js";
+        import { getDatabase, ref, set, get, child, onValue } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-database.js";
 
         const firebaseConfig = {
             apiKey: "AIzaSyAksVQRYriHb9gS7TjgeN3faX10IoKJBIw",
@@ -110,101 +110,54 @@
             }
         }
 
-        function drawTeams() {
+        function loadDataFromFirebase() {
+            get(child(ref(db), 'teams')).then(snapshot => {
+                if (snapshot.exists()) {
+                    teams = snapshot.val();
+                    renderTeams();
+                } else {
+                    alert('Keine Teams gefunden!');
+                }
+            });
+
+            get(child(ref(db), 'spielplan')).then(snapshot => {
+                if (snapshot.exists()) {
+                    schedule = snapshot.val();
+                    renderSchedule();
+                } else {
+                    alert('Kein Spielplan gefunden!');
+                }
+            });
+        }
+
+        function renderTeams() {
             const teamTable = document.getElementById('teamTable').querySelector('tbody');
             teamTable.innerHTML = '';
-            teams = [];
-
-            if (players.length < 2) {
-                alert('Es müssen mindestens zwei Spieler hinzugefügt werden!');
-                return;
-            }
-
-            const shuffledPlayers = [...players];
-            shuffle(shuffledPlayers);
-
-            let teamCount = 1;
-            while (shuffledPlayers.length >= 2) {
-                const player1 = shuffledPlayers.pop();
-                const player2 = shuffledPlayers.pop();
-                const teamName = `Team ${teamCount}`;
-                teams.push({ player1, player2, teamName });
+            teams.forEach((team, index) => {
                 const row = `<tr>
-                    <td>${teamName}</td>
-                    <td>${player1}</td>
-                    <td>${player2}</td>
-                    <td><input type="text" class="rename-input" value="${teamName}" onchange="updateTeamName(${teamCount - 1}, this.value)"></td>
+                    <td>Team ${index + 1}</td>
+                    <td>${team.player1}</td>
+                    <td>${team.player2}</td>
+                    <td><input type="text" class="rename-input" value="${team.teamName}" onchange="updateTeamName(${index}, this.value)"></td>
                 </tr>`;
                 teamTable.innerHTML += row;
-                teamCount++;
-            }
+            });
         }
 
-        function updateTeamName(teamIndex, newName) {
-            teams[teamIndex].teamName = newName;
-        }
-
-        function saveTeamNames() {
-            const teamTable = document.getElementById('teamTable').querySelector('tbody').rows;
-            for (let i = 0; i < teamTable.length; i++) {
-                const newName = teamTable[i].querySelector('.rename-input').value.trim();
-                teams[i].teamName = newName;
-            }
-            set(ref(db, 'teams'), teams)
-                .then(() => alert('Teamnamen erfolgreich gespeichert.'))
-                .catch(error => console.error('Fehler beim Speichern der Teamnamen:', error));
-        }
-
-        function generateSchedule() {
+        function renderSchedule() {
             const scheduleTable = document.getElementById('scheduleTable').querySelector('tbody');
             scheduleTable.innerHTML = '';
-            schedule = [];
-
-            if (teams.length < 2) {
-                alert('Es müssen mindestens zwei Teams vorhanden sein!');
-                return;
-            }
-
-            set(ref(db, 'spielplan'), null);
-            let matchCount = 1;
-
-            for (let i = 0; i < teams.length; i++) {
-                for (let j = i + 1; j < teams.length; j++) {
-                    const game = {
-                        match: matchCount++,
-                        team1: teams[i].teamName,
-                        team2: teams[j].teamName,
-                        result: ''
-                    };
-                    schedule.push(game);
-                    scheduleTable.innerHTML += `<tr>
-                        <td>Spiel ${game.match}</td>
-                        <td>${game.team1}</td>
-                        <td>${game.team2}</td>
-                        <td><input type="text" class="result-input" placeholder="Ergebnis" onchange="updateResult(${game.match - 1}, this.value)"></td>
-                    </tr>`;
-                }
-            }
-            set(ref(db, 'spielplan'), schedule);
-        }
-
-        function updateResult(matchIndex, result) {
-            schedule[matchIndex].result = result;
-            set(ref(db, 'spielplan'), schedule);
-        }
-
-        function shuffle(array) {
-            for (let i = array.length - 1; i > 0; i--) {
-                const j = Math.floor(Math.random() * (i + 1));
-                [array[i], array[j]] = [array[j], array[i]];
-            }
+            schedule.forEach(game => {
+                scheduleTable.innerHTML += `<tr>
+                    <td>Spiel ${game.match}</td>
+                    <td>${game.team1}</td>
+                    <td>${game.team2}</td>
+                    <td>${game.result || 'Offen'}</td>
+                </tr>`;
+            });
         }
 
         window.addPlayer = addPlayer;
-        window.drawTeams = drawTeams;
-        window.saveTeamNames = saveTeamNames;
-        window.generateSchedule = generateSchedule;
-        window.updateResult = updateResult;
         window.loadDataFromFirebase = loadDataFromFirebase;
     </script>
 </body>
